feat: add `/api/v1/auth/check` endpoint
